# skylines-telemetry

./: .gitignore  README.md  docker-compose.yml
SkylinesTelemetryMod/: SimpleJson.cs  SkylinesGame.cs  SkylinesLog.cs  (+8 more)
prototype/: .gitignore  Cargo.toml  docker-compose.yml
prototype/skylines-dash/: Dockerfile  app.py  requirements.txt
prototype/skylines-liquibase/changelog/: changelog.xml  liquibase.properties
prototype/skylines-processing/: pom.xml
prototype/skylines-processing/src/main/java/patricksongzy/skylines/processing/: SkylinesTelemetry.java
prototype/skylines-processing/src/main/java/patricksongzy/skylines/processing/data/: KafkaJsonTopicSourceFactoryBean.java  KafkaSourceFactoryBean.java  StalingData.java  TelemetryData.java
prototype/skylines-processing/src/main/java/patricksongzy/skylines/processing/data/enriched/: AmbulanceData.java  AmbulanceTripSegment.java  HospitalData.java  IncidentData.java
prototype/skylines-processing/src/main/java/patricksongzy/skylines/processing/streaming/: TelemetryStream.java  Timestamps.java
prototype/skylines-processing/src/main/resources/: applicationContext.xml
prototype/skylines-websocket/: Dockerfile  build.sh  pom.xml
prototype/skylines-websocket/src/main/java/patricksongzy/skylines/websocket/: KafkaConsumerService.java  TelemetryHandler.java
prototype/skylines-websocket/src/main/java/patricksongzy/skylines/websocket/controller/: TelemetryController.java
prototype/skylines-websocket/src/main/webapp/WEB-INF/: applicationContext.xml  web.xml  websocket-servlet.xml
prototype/src/: main.rs
(+79 files in other folders)
