[package]
name = "skylines-telemetry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
# rdkafka = { version = "0.28.0", features = ["cmake-build"] }
kafka = "0.9.0"
